@@ -313,6 +313,7 @@ XS_EUPXS({{cpp.function.name}}) {
             croak("Expected object. Got a non-object?!");
         {%when 'int'         %}{{arg | join: ' '}} = ({{arg.0}})SvIV(ST({{st.position}}));
         {%when 'short'       %}{{arg | join: ' '}} = ({{arg.0}})SvIV(ST({{st.position}}));
+        {%when 'float'       %}{{arg | join: ' '}} = ({{arg.0}})SvNV(ST({{st.position}}));
         {%when 'double'      %}{{arg | join: ' '}} = ({{arg.0}})SvNV(ST({{st.position}}));
         {%when 'FILE'        %}{{arg | join: ' '}} = PerlIO_findFILE(IoIFP(sv_2io(ST({{st.position}}))));
         {%when 'PerlIO *'    %}{{arg | join: ' '}} = IoIFP(sv_2io(ST({{st.position}})));
@@ -345,6 +346,7 @@ XS_EUPXS({{cpp.function.name}}) {
             {%when 'int'            %}({{arg.0}}) SvIV(ST({{      size.req | plus: position }}));
             {%when 'short'          %}({{arg.0}}) SvIV(ST({{      size.req | plus: position }}));
             {%when 'double'         %}({{arg.0}}) SvNV(ST({{      size.req | plus: position }}));
+            {%when 'float'          %}({{arg.0}}) SvNV(ST({{      size.req | plus: position }}));
             {%when 'FILE'           %} PerlIO_findFILE(IoIFP(sv_2io(ST({{size.req | plus: position }}))));
             {%when 'Fl_Color'       %}({{arg.0}}) SvIV(ST({{      size.req | plus: position }}));
             {%when 'Fl_Char'        %}({{arg.0}}) SvIV(ST({{      size.req | plus: position }}));
